@@ -7,6 +7,7 @@ Jython 2.5.1rc2
     - [ 1425 ] distutils/util.py assumes too much posix
     - [ 1457 ] Cannot write an array in a file opened in r+b mode.
     - [ 1382 ] __cmp__ on certain types raises ArrayStoreException
+    - [ 1443 ] Can't update() hashlib.sha1() with array.array('c')
 
 Jython 2.5.1rc1
   New Features
